--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,5 @@
 
+<form method="post" action="/checkout">
+  <label>Enter Text</label>
+  <input type="text" name="item">
+  <input type="submit" id="submit">
